# SQRS-RandomCoffee

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  app.db  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: main.py
backend/app/api/: auth.py  deps.py  matching.py  profile.py  schemas.py
backend/app/core/: __init__.py  auth.py  emailer.py  security.py  settings.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/services/: auth.py  matching.py  profile.py
backend/tests/: __init__.py  conftest.py  test_acceptance_scenarios.py  test_auth.py  test_matching.py  test_profile.py  test_unit_core.py  utils.py
frontend/: Dockerfile  app.py  requirements.txt
frontend/src/: config.py
frontend/src/api/: auth_guard.py  client.py
frontend/src/pages/: auth.py  dashboard.py  profile.py
frontend/src/state/: browser_storage.py  session.py
frontend/src/ui/: layout.py  styles.py
load_tests/: locustfile.py
