[tool.poetry]
name = "randomcoffee-backend"
version = "1.0.0"
description = "Random Coffee — backend API for random weekly meetings"
authors = ["SQRS Team"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.115.0"
sqlalchemy = "2.0.35"
pydantic-settings = "2.5.2"
PyJWT = "2.9.0"
apscheduler = "3.10.4"
networkx = ">=3.0"

[tool.poetry.dependencies.uvicorn]
version = "0.30.6"
extras = ["standard"]

[tool.poetry.dependencies.pydantic]
version = "2.9.2"
extras = ["email"]

[tool.poetry.group.dev.dependencies]
pytest = "8.3.3"
pytest-cov = "5.0.0"
httpx = "0.27.2"
ruff = "0.6.9"
mypy = "1.11.2"
bandit = "1.7.9"
radon = "6.0.1"
flake8 = "7.1.1"
locust = "2.31.6"
pre-commit = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ── Tool configs ──────────────────────────────────────────────────

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"app/api/*.py" = ["B008"]
"app/api/deps.py" = ["B008"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict_optional = true
